[package]
name = "tokio-tungstenite-cex-ws-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.9.0"
chrono = "0.4.39"
chrono-tz = "0.10.0"
colored = "2"
futures-util = "0.3.31"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
